--- a/social_app/Config.env
+++ b/social_app/Config.env
@@ -1,4 +1,4 @@
 FLASK_APP=flasky.py
-FLASK_CONFIG=heroku
+FLASK_CONFIG=production
 MAIL_USERNAME='awanzihassan@gmail.com'
 MAIL_PASSWORD='xuhhwjkcsscxdmms'
